<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/heading_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:fontFamily="@font/jameel_noori"
            android:text="@string/app_name" />

    </LinearLayout>

    <TextView
        style="@style/detail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/jameel_noori"
        android:padding="5dp"
        android:text="@string/exitMessage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_tv"
            style="@style/formal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/jameel_noori"
            android:padding="10dp"
            android:text="@string/no" />

        <TextView
            android:id="@+id/yes_tv"
            style="@style/formal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/jameel_noori"
            android:padding="10dp"
            android:text="@string/yes" />

    </LinearLayout>

</LinearLayout>