<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/edit_text_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/about_us_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/jameel_noori"
                    android:text="@string/settings_about_us"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/terms_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/jameel_noori"
                    android:text="@string/settings_terms_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacy_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/jameel_noori"
                    android:text="@string/settings_privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/jameel_noori"
                    android:text="@string/share_app"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/feedback_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/jameel_noori"
                    android:text="@string/send_feedback"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/arrow" />

            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:background="@color/white"-->
                <!--android:elevation="5dp"-->
                <!--android:orientation="horizontal"-->
                <!--android:padding="5dp">-->

                <!--<Switch-->
                    <!--android:id="@+id/notification_switch"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="20dp"-->
                    <!--android:layout_marginRight="20dp"-->
                    <!--android:switchPadding="15dp"-->
                    <!--android:background="@color/white"-->
                    <!--android:fontFamily="@font/jameel_noori"-->
                    <!--android:padding="10dp"-->
                    <!--android:text="@string/notification"-->
                    <!--android:textColor="@color/black"-->
                    <!--android:textSize="18sp" />-->

            <!--</LinearLayout>-->

        </LinearLayout>

    </ScrollView>

</FrameLayout>
